--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/nila"
     tools:context=".MainActivity">
 
     <!-- Judul Aplikasi -->
@@ -13,10 +14,15 @@
         android:text="Kalkulator Pakan Ikan"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:gravity="center"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="10"
+        android:shadowDy="10"
+        android:shadowRadius="8"/>
+
 
     <!-- Deskripsi Aplikasi -->
     <TextView
@@ -25,10 +31,14 @@
         android:layout_height="wrap_content"
         android:text="Untuk Budidaya Ikan"
         android:textSize="18sp"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/white"
         android:textAlignment="center"
         android:layout_below="@id/textViewTitle"
-        android:layout_marginBottom="32dp"/>
+        android:layout_marginBottom="32dp"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="15"
+        android:shadowDy="15"
+        android:shadowRadius="12"/>
 
     <!-- Tombol FR -->
     <Button
@@ -89,5 +99,5 @@
         android:layout_marginTop="24dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
-    
+
 </RelativeLayout>
